--- a/GreenwaysViz/greenways.html
+++ b/GreenwaysViz/greenways.html
@@ -190,9 +190,11 @@
 
     const map = L.map('map', {
         center: [35.73230144892665, -78.87270608267929],
-        zoom: 13,
+        zoom: 11,
         layers: [greenways, att, streets]
     })
+    
+    map.setMaxBounds(map.getBounds());
 
     const layerControl = L.control.layers(baseMaps, overlayMaps).addTo(map);
 
