--- a/GreenwaysViz/greenways.html
+++ b/GreenwaysViz/greenways.html
@@ -199,7 +199,7 @@
         style: function mystyle(feature) {
             return {
                 fillOpacity: 0,
-                weight: 2,
+                weight: 1,
                 color: "black"
             }}
     });
@@ -250,7 +250,7 @@
     const map = L.map('map', {
         center: [35.73230144892665, -78.87270608267929],
         zoom: 11,
-        layers: [greenways, streets]
+        layers: [greenways, streets, boundary]
     });
     
     // limit map bounds to Apex and immediate surroundings
